# opencrosshair

./: .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix
src/: app.rs  color.rs  list_outputs.rs  main.rs  renderer.rs  shader.wgsl
