[package]
name = "opencrosshair"
version = "0.1.0"
edition = "2024"

[dependencies]
smithay-client-toolkit = "0.20"
wgpu = "28.0.0"
wayland-backend = { version = "0.3.0", features = ["client_system"] }
raw-window-handle = { version = "0.6", features = ["std"] }
wayland-client = "0.31.1"
env_logger = "0.11"
pollster = "0.4.0"
image = { version = "0.25", features = ["png"] }
bytemuck = { version = "1.25", features = ["derive"] }
cgmath = "0.18"
